update default search word

--- a/WebContent/businessSearch.html
+++ b/WebContent/businessSearch.html
@@ -211,7 +211,7 @@
         <div id="poweredby">Powered by <a href="http://www.yelp.com"><img src="http://static.px.yelp.com/i/map/miniMapLogo.png" border="0" /></a></div> 
         <div id="searchbox">
             <form>
-                Search for <input type="text" id="term" name="term" value="sushi"/> <input type="button" value="Search" onclick="return updateMap();"/>
+                Search for <input type="text" id="term" name="term" value="pet service"/> <input type="button" value="Search" onclick="return updateMap();"/>
                 <img id="spinner" src="images/spinner.gif" />
                 <span class="error" id="errorMessage" />
             </form>
